git-svn-id: http://svn.l2jfree.com/l2jfree/branches/genesis@9268 6ff00ba9-25cd-4355-987e-099c62bc2628